# undermap

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.sh  setup_dev.sh
.github/workflows/: ci.yml
cli/: main.py
core/: enricher.py  mailer.py  niches.py  scanner.py
data/: models.py
tests/: test_mailer.py  test_niches.py  test_scanner.py
