[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undermap"
version = "0.1.0"
description = "Prospecção B2B automatizada para devs e agências web"
authors = [{ name = "Seu Nome", email = "voce@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.scripts]
undermap = "cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "bandit>=1.7"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
